# clases

./: .gitignore  pyproject.toml
CV/: Lab_Resampling.ipynb
Clustering/: K_Means_2023.ipynb
EDA/: EDA.ipynb
Estadistica_inferencial/: Estadistica_inferencial.ipynb
PCA/: Ch12-unsup-lab.ipynb
Regresion_lineal_y_multiple/: linear_regression_model.pkl  reg_lineal.ipynb
SVM/: Ch09-svm-lab.ipynb
Text_mining/: TextMining.ipynb
Trees/: Ch08-baggboost-lab.ipynb
deploy_model_mvp/: README.md  main.py  model.pkl  requirements.txt
deploy_model_mvp/templates/: index.html  result.html
eia/: data.json  get_data.ipynb
gen_ai/notebooks/: extract_tags.ipynb  tags.txt  tu_documento.txt
k_means/: K_Means_2024.ipynb
